# dashboards

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Rainer 8Q-1708999607360.json  compose.yaml  db_backup.sh  db_restore.sh  db_schema.py  grafana.ini
grafana/: Dockerfile  datasources.yaml  pyproject.toml
grafana/config/: datasources.json
grafana/grafana_configuration/: __main__.py  api_key.py  dashboards.py  datasources.py  users.py  utils.py
grafana/scripts/: api_key.py  create_datasources.py  datasources.py  main.py  utils.py
grafana/templates/: datasource.json
monitoring/: Dockerfile  monitor-prometheus.py  monitor.sh  ssh.py
monitoring/runcards/: monitor.yml
prometheus/: prometheus.yml
qpu_monitoring/: Dockerfile  README.md  pyproject.toml
qpu_monitoring/qpu_monitoring/: __main__.py  add_platform.py  database_schema.py  metrics_export.py
qpu_monitoring/qpu_monitoring/scripts/: monitoring.py  slurm_submit_template.sh
qpu_monitoring/runcards/: test - Copy.json  test.json
qpu_monitoring/scripts/: metrics_export.py  monitor.sh  monitoring.py  monitoring_connection.py  monitoring_template.sh  qpu_monitor_template.sh  slurm_submit_template.sh  slurm_template.sh
remote_monitoring/: Dockerfile  pyproject.toml
remote_monitoring/remote_monitoring/: __main__.py  database_schema.py  experiments.py  metrics_export.py  monitoring.py  (+2 more)
scripts/: api_key.py  create_dashboards.py  create_datasources.py  main.py  utils.py
temperature/: Dockerfile
templates/: README.md  new_dashboard.json  new_datasource.json  stat.json  time_series.json
(+20 files in other folders)
