[tool.poetry]
name = "qpu-monitoring"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
qibocal = "^0.0.9"
qibolab = {extras = ["los", "zh", "qm", "qblox"], version = "^0.1.6"}
jinja2 = "^3.1.3"
prometheus-client = "^0.20.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
