[tool.poetry]
name = "qpu-monitoring"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
qibocal = "^0.2.1"
qibolab = {extras = ["los", "zh", "qm", "qblox", "emulator"], version = "^0.2.5"}
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
